# V2X_AEB

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  environments.yaml  readme.md
.devcontainer/: Dockerfile  (+1 more)
src/calibration/: CMakeLists.txt  package.xml
src/calibration/launch/: cyberRock_tf.launch
src/calibration/params/: calibration_params.yaml
src/calibration/src/: static_tf_broadcaster.cpp
src/common/e100_msgs/: CMakeLists.txt  package.xml
src/common/e100_msgs/msg/: FollowerStatus.msg  SpeedTarget.msg  brakecmd.msg  canbrake131.msg  canspeed301.msg  cansteer703.msg  enablecmd.msg  iduOn632.msg  pi_status.msg  steercmd.msg  supervisor.msg  xboxone.msg  zigbee.msg
src/common/hycan_msgs/: CMakeLists.txt  README.md  package.xml
src/common/hycan_msgs/msg/: Box3D.msg  DetectionResults.msg  FourImages.msg  Image.msg  Localization.msg
src/common/math/: CMakeLists.txt  linear_interpolation.cc  linear_interpolation.h  vec2d.cc  vec2d.h
src/rock/control/LQR/: CMakeLists.txt  LQR.cpp  LQR.h  leadlag_controller.cc  leadlag_controller.h  package.xml
src/rock/control/LQR/cfg/: LQR.cfg
src/rock/control/LQR/launch/: LQR_controller.launch
src/rock/control/LQR/params/: plotjuggler_lqr.xml  rock.yaml  rqt_multiplot.xml
src/rock/control/control/: CMakeLists.txt  README.md  package.xml
src/rock/control/control/cfg/: Param.cfg
src/rock/control/control/launch/: rviz.launch  urdf.launch  vehicle.launch
src/rock/control/control/params/: rock.yaml  vehicle_e100_1.yaml  vehicle_e100_2.yaml
src/rock/control/control/rviz/: platooning.rviz  plot_juggler.xml  pnc_test.rviz  rqt_multiplot.xml  rqt_multiplot_distance.xml
src/rock/control/control/src/: main.cpp  top.cpp  top.h
src/rock/control/control/src/common/: common.h  discretized_path.h
src/rock/control/control/src/control/: control.cpp  control.h
src/rock/control/control/src/draw/: draw.cpp  draw.h
src/rock/control/control/src/mapping/: mapping.cpp  mapping.h
src/rock/control/control/src/smoother/: track_smoother.cc  track_smoother.h
src/rock/control/control/src/vehicle/: vehicle.cpp  vehicle.h
src/rock/control/control/urdf/: e100_1.urdf  e100_2.urdf  target.urdf  target_behind.urdf
src/rock/control/longitudinal_controller/: CMakeLists.txt  package.xml
src/rock/control/longitudinal_controller/cfg/: lon_controller.cfg
src/rock/control/longitudinal_controller/launch/: lon_controller.launch
src/rock/control/longitudinal_controller/params/: rock.yaml
src/rock/control/longitudinal_controller/scripts/: controller_test_ui.py
src/rock/control/longitudinal_controller/src/: lon_controller_node.cpp  lon_controller_node.h  pid_controller.cc  pid_controller.h
src/rock/control/speed_controller/: CMakeLists.txt  package.xml
src/rock/control/speed_controller/cfg/: speed_controller.cfg  speed_controller_test.cfg
src/rock/control/speed_controller/launch/: speed_controller.launch  speed_controller_highroad.launch  speed_controller_test.launch
src/rock/control/speed_controller/params/: rock.yaml
src/rock/control/speed_controller/scripts/: controller_test_ui.py
src/rock/control/speed_controller/src/: speed_controller.cpp  speed_controller.h  speed_controller_test.cpp  speed_controller_test.h
src/rock/control/steer_controller/: CMakeLists.txt  README.md  package.xml
src/rock/control/steer_controller/cfg/: pursuit_param.cfg  stanley_param.cfg
src/rock/control/steer_controller/launch/: pure_pursuit.launch  rear_feedback.launch  stanley_controller.launch
src/rock/control/steer_controller/params/: rock.yaml
src/rock/control/steer_controller/src/: pure_pursuit.cpp  pure_pursuit.h  rear_feedback.cpp  rear_feedback.h  stanley_controller.cpp  stanley_controller.h
src/rock/control/track_manager/: CMakeLists.txt  README.md  package.xml
src/rock/control/track_manager/launch/: rviz.launch  track_manager.launch
src/rock/control/track_manager/params/: rock.yaml
src/rock/control/track_manager/src/node/: track_manager_node.cpp  type_converter.h
src/rock/control/track_manager/urdf/: e100_1.urdf  target.urdf
src/rock/detection/lidar_tracking/: CMakeLists.txt  README.md  package.xml
src/rock/detection/lidar_tracking/cfg/: ParamLoc.cfg  PclEditor.cfg
src/rock/detection/lidar_tracking/launch/: pcl_editor.launch  tracking.launch
src/rock/detection/lidar_tracking/params/: e100_1.ply  e100_2.ply  e100_behind.ply  e100_behind2.ply  e100_new_1.ply  e100_new_2.ply  e200.ply  hycan_1.ply  pcl_editor.rviz  vehicle_rock.yaml
src/rock/detection/lidar_tracking/src/: lidar_config.h  velodyne.h
src/rock/detection/lidar_tracking/src/ekf/: ekf_pose.cpp  ekf_pose.h
src/rock/detection/lidar_tracking/src/ground_filter/: ground_filter.cpp  ground_filter.h
src/rock/detection/lidar_tracking/src/pcl_editor_node/: README.md  box_roi.h  main.cc  top.cc  top.h
src/rock/detection/lidar_tracking/src/tracker/: tracker.h
src/rock/detection/lidar_tracking/src/tracker_node/: main.cc  top.cc  top.h
src/rock/driver/rock_can/can_decoder/: CMakeLists.txt  README.md  package.xml
src/rock/driver/rock_can/can_decoder/launch/: can_decoder.launch
src/rock/driver/rock_can/can_decoder/src/: can_decoder.cpp
src/rock/driver/rock_can/can_encoder/: CMakeLists.txt  README.md  package.xml
src/rock/driver/rock_can/lkusbcan/: CMakeLists.txt  README.md  package.xml
src/rock/driver/wit_ros_driver/: CMakeLists.txt  README.md  package.xml
src/rock/driver/wit_ros_driver/launch/: wit_gps.launch  wit_imu.launch
src/rock/driver/wit_ros_driver/scripts/: 99-usb-serial.rules  get_imu_rpy.py  wit_modbus_gps_ros.py  wit_modbus_imu_ros.py
src/rock/localization/: CMakeLists.txt  package.xml
src/rock/localization/launch/: localization.launch
src/rock/localization/pipeline/: CMakeLists.txt  package.xml
src/rock/localization/pipeline/launch/: localization_countryroad.launch  localization_fenxian.launch  localization_highway.launch
src/rock/localization/pipeline/rviz/: fusion.rviz  rqt_multiplot.xml
src/rock/localization/pipeline/src/: main.cpp  top.cpp  top.h
src/rock/localization/src/: localization.cpp
(+383 files in other folders)
